--- a/css/about-style.css
+++ b/css/about-style.css
@@ -118,6 +118,9 @@ body {
 
 h1 {
   font-family: Plus Jakarta Sans;
+  font-size: 3.5rem;
+  line-height: 1.5;
+  font-weight: 800;
 }
 
 h3 {
@@ -236,7 +239,7 @@ h3 {
 /* our history */
 .title-ourHistory {
   text-align: left;
-  padding-top: 18%;
+  padding-top: 12%;
   padding-left: 9%;
   margin: 10px;
   color: #808583;
@@ -265,12 +268,13 @@ h3 {
   text-align: left;
   background: linear-gradient(256.91deg, #F91218 13.78%, #FFC700 94.38%);
   position: absolute;
-  width: 55%;
-    margin-top: 30%;
-    padding: 5%;
+  width: 697px;
+  margin-top: 620px;
+  height: 593px;
 }
 
 .para-textHistory {
+  padding: 8%;
   color: white;
   font-size: 16px;
 
@@ -285,6 +289,7 @@ h3 {
 
 .our-team {
   background-color: #D7D7D7;
+  margin-top: 30%;
   padding: 6% 0%;
   width: 100%;
 }
@@ -490,7 +495,8 @@ h3 {
   /* our history */
   .title-ourHistory {
     text-align: center;
-    padding-top: 18%;
+    padding-top: 12%;
+
     margin: 10px;
     color: #808583;
   }
@@ -514,6 +520,23 @@ h3 {
     padding-top: 2%;
     display: none;
   }
+
+  .para-OurHistory {
+    text-align: center;
+    background: linear-gradient(256.91deg, #F91218 13.78%, #FFC700 94.38%);
+    position: absolute;
+    width: 720px;
+    margin-top: 320px;
+    height: 550px;
+  }
+
+  .para-textHistory {
+    padding: 8%;
+    color: white;
+    font-size: 16px;
+
+  }
+
 
   /* our team */
 
@@ -733,7 +756,7 @@ h3 {
   /* our history */
   .title-ourHistory {
     text-align: center;
-    padding-top: 18% !important;
+    padding-top: 12%;
     margin: 10px;
     color: #808583;
   }
@@ -759,6 +782,21 @@ h3 {
     display: none;
   }
 
+  .para-OurHistory {
+    text-align: center;
+    background: linear-gradient(256.91deg, #F91218 13.78%, #FFC700 94.38%);
+    position: absolute;
+    width: 100%;
+    margin-top: 260px;
+    height: 710px;
+  }
+
+  .para-textHistory {
+    padding: 8%;
+    color: white;
+    font-size: 14px;
+
+  }
 
 
   /* our team */
