--- a/css/style.css
+++ b/css/style.css
@@ -249,35 +249,13 @@ h1{
 
 /*** Hero Header ***/
 .hero-header {
+    background: url(../img/Header-video.mp4);
+    background-position: center center;
+    background-repeat: no-repeat;
     background-size: cover;
-    height: calc(100vh - 150px);
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-    background-attachment: fixed;
+
 }
-.overlay {
-    position: relative;
-}
-.overlay::before {
-    content: '';
-    background: rgba(0, 0, 0, 0.6);
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    z-index: 1;
-    left: 0;
-}
-#myVideo {
-    object-fit: cover;
-    width: 100vw;
-    position: absolute;
-    top: 0;
-    left: 0;
-}
+
 .flex{
     display: flex;
     justify-content: center;
@@ -309,16 +287,13 @@ h1{
 
 /* scroll icon */
 .mouse-icon {
-    border: 2px solid #fff;
+    border: 2px solid #000;
     border-radius: 16px;
     height: 40px;
     width: 24px;
     display: block;
     z-index: 10;
     opacity: 0.7;
-    position: absolute;
-    bottom: 25px;
-    left: 50%;
   }
   .mouse-icon .wheel {
     -webkit-animation-name: drop;
@@ -343,7 +318,7 @@ h1{
   .mouse-icon .wheel {
     position: relative;
     border-radius: 10px;
-    background: #fff;
+    background: #000;
     width: 2px;
     height: 6px;
     top: 4px;
@@ -1487,6 +1462,17 @@ margin-bottom: 5px;
         height: 500px;
     }
     
+    
+    .banner {
+        background-image: url('/Images/contact-bg.png');
+        background-size: cover;
+        background-position: center;
+        height: 400px;
+        align-items: center;
+      }
+    
+    
+    
       /* form  */
     
       .form-yourName {
@@ -1710,13 +1696,8 @@ margin-bottom: 5px;
         height: 100vh;
     } */
 
-    .min-width-header{  
-    padding-right: 0;
-    }
+    .min-width-header{
+        
+        padding-right: 0;
 
-    .p-font-details-2{
-        text-align: left !important;
-        font-size: 16px !important;
-        font-weight: 500;
-        color: #ffffff !important;
     }
