--- a/css/silver-style.css
+++ b/css/silver-style.css
@@ -629,3 +629,23 @@ h1 {
 .pl-8 {
     padding-left: 8rem !important;
 }
+
+    /* Chrome, Safari, Edge, Opera */
+    input::-webkit-outer-spin-button,
+    input::-webkit-inner-spin-button {
+      -webkit-appearance: none;
+      margin: 0;
+    }
+
+    .container-1{
+        padding-top: 20px;
+        padding-bottom: 30px;
+    }
+
+    .container-2{
+        padding-top: 50px;
+    }
+
+    .align-3{
+        display: contents;
+    }
